[gd_scene load_steps=14 format=2]

[ext_resource path="res://card_loader.gd" type="Script" id=1]
[ext_resource path="res://card/card.gd" type="Script" id=2]
[ext_resource path="res://greek_cards/0_back.jpg" type="Texture" id=3]
[ext_resource path="res://card/card_side.tres" type="Material" id=4]
[ext_resource path="res://card/card_normal.png" type="Texture" id=5]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 0.28, 0.38 )

[sub_resource type="SpatialMaterial" id=2]
resource_local_to_scene = true
albedo_texture = ExtResource( 3 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 5 )
uv1_scale = Vector3( -1, -1, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.28, 0.016, 0.38 )

[sub_resource type="CubeMesh" id=4]
flip_faces = true
size = Vector3( 0.3, 0.02, 0.4 )

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
params_blend_mode = 1
albedo_color = Color( 0, 0, 0, 1 )
uv1_scale = Vector3( 3, 2, 1 )

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -0.15, 0.025, 0.2085, 0.15, 0.025, 0.2085, -0.15, -0.025, 0.2085, 0.15, 0.025, 0.2085, 0.15, -0.025, 0.2085, -0.15, -0.025, 0.2085, 0.15, 0.025, -0.2085, -0.15, 0.025, -0.2085, 0.15, -0.025, -0.2085, -0.15, 0.025, -0.2085, -0.15, -0.025, -0.2085, 0.15, -0.025, -0.2085, 0.15, 0.025, 0.2085, 0.15, 0.025, -0.2085, 0.15, -0.025, 0.2085, 0.15, 0.025, -0.2085, 0.15, -0.025, -0.2085, 0.15, -0.025, 0.2085, -0.15, 0.025, -0.2085, -0.15, 0.025, 0.2085, -0.15, -0.025, -0.2085, -0.15, 0.025, 0.2085, -0.15, -0.025, 0.2085, -0.15, -0.025, -0.2085, 0.15, 0.025, 0.2085, -0.15, 0.025, 0.2085, 0.15, 0.025, -0.2085, -0.15, 0.025, 0.2085, -0.15, 0.025, -0.2085, 0.15, 0.025, -0.2085, -0.15, -0.025, 0.2085, 0.15, -0.025, 0.2085, -0.15, -0.025, -0.2085, 0.15, -0.025, 0.2085, 0.15, -0.025, -0.2085, -0.15, -0.025, -0.2085 )

[sub_resource type="Animation" id=8]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 4, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1080, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody/CollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector3( 0, 2, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector3( 0, 1080, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody/CollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBody:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="card" type="Spatial"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="TopMesh" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.009, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 6 )
disabled = true

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0.1 )
visible = false
omni_range = 0.205966

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.1 )
visible = false
omni_range = 0.2

[node name="OmniLight3" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0467044, 0 )
visible = false
light_energy = 0.2
shadow_enabled = true
omni_range = 0.123735

[node name="CardLoader" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 8 )
anims/fall = SubResource( 7 )

[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
